# EmbConsole

./: .gitignore  .gitmodules  CMakeLists.txt  conanfile.py
include/: EmbConsole.hpp
src/: EmbConsole.cpp
src/impl/: Console.cpp  ConsolePrintCommand.cpp  ConsolePrivate.cpp  ConsolePrivate.hpp  ConsolePromptCommand.cpp  Functions.cpp  Functions.hpp  Options.cpp  StdCapture.cpp  StdCapture.hpp  Tools.cpp  Tools.hpp
src/impl/base/: ITerminal.cpp  ITerminal.hpp  Terminal.cpp  Terminal.hpp  TerminalAnsi.cpp  TerminalAnsi.hpp  TerminalFile.cpp  TerminalFile.hpp  TerminalLocalTcp.cpp  TerminalLocalTcp.hpp  TerminalSyslog.cpp  TerminalSyslog.hpp
src/impl/unix/: TerminalUnix.cpp  TerminalUnix.hpp  TerminalUnixSocket.cpp  TerminalUnixSocket.hpp
src/impl/win/: TerminalWindows.cpp  TerminalWindows.hpp  TerminalWindowsLegacy.cpp  TerminalWindowsLegacy.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/debug/: CMakeLists.txt
test_package/src/: example.cpp
